# recsys2020-challenge

./: .gitignore  README.md  cli.py  create_base_files.sh  create_bert_features.sh  create_features_dependent_on_targets.sh  create_features_independent_on_targets_1.sh  create_features_independent_on_targets_2.sh  create_features_independent_on_targets_3.sh  create_features_independent_on_targets_4.sh  create_meta_features.sh  experiment.sh  job.sh  pyproject.toml  workflow.sh
features/: ColdStart_meta_features.py  ColdStart_meta_features_agg_by_engaged_user_id.py  ColdStart_meta_features_agg_by_engaging_user_id.py  ColdStart_meta_features_agg_by_tweet_id.py  ColdStart_target_encoding.py  agg_follow_following_count_of_1dconnect_users.py  agg_func.py  at_sign_features.py  base.py  bert_similarity_between_engaged_and_engaging_surfacing_tweet_vectors_feature.py  bert_similarity_between_engaged_tweet_and_engaging_surfacing_tweet_vectors_feature.py  bert_similarity_between_engaging_and_engaged_tweets_vectors_feature.py  bert_similarity_between_tweet_and_tweets_user_vectors_feature.py  bert_utils.py  bow_based_on_diff_alldf_likedf.py  common_flg_features.py  common_numeric_features.py  connected_2nd_engaged_to_engaging.py  connected_2nd_engaging_to_engaged.py  count_encoding.py  count_encoding_crossing.py  count_encoding_crossing_2.py  count_encoding_engaging_hashtags.py  count_encoding_engaging_present_domains.py  count_encoding_engaging_present_links.py  count_encoding_engaging_present_media.py  count_encoding_hashtags.py  count_encoding_in_tweetid_units.py  encoding_func.py  (+62 more)
(+260 files in other folders)
